--- a/gtk-3.0/gtk-menus.css
+++ b/gtk-3.0/gtk-menus.css
@@ -7,6 +7,8 @@
 	background-color: @dark_bg_color;
 	border-color: shade (@dark_bg_color,0.5);
 	color: @selected_fg_color;
+	border-width: 1 1 1 1;
+	border-style: solid;
 }
 
 /* menuitem */
